--- a/datapaths.yaml
+++ b/datapaths.yaml
@@ -7,5 +7,5 @@ PATHS:
   EXPECTED_SURFACES: 3
   EXPECTED_CELLS: 3
   BATCH_FLAG: True
-  DISABLE_TQDM: False
-  ENABLE_MULTIPROC_SLURM: False
+  DISABLE_TQDM: True
+  ENABLE_MULTIPROC_SLURM: True
