--- a/.github/workflows/macos_build.yaml
+++ b/.github/workflows/macos_build.yaml
@@ -27,8 +27,7 @@ jobs:
         # pip install napari PySide6 torch ultralytics h5py natsort torchvision tqdm timm ml_collections pydicom skimage scipy bokeh
 
     - name: Build with PyInstaller
-      # IMPORTANT: Ensure 'your_app_macos.spec' matches the name of your macos spec file
-      run: pyinstaller your_app_macos.spec
+      run: pyinstaller OCT_mac_app.spec
 
     - name: Zip macos executable
       run: |
