--- a/.github/workflows/windows_build.yaml
+++ b/.github/workflows/windows_build.yaml
@@ -22,9 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller # Install PyInstaller
-        # Add any other project-specific dependencies here, e.g.:
-        # pip install napari PySide6 torch ultralytics h5py natsort torchvision tqdm timm ml_collections pydicom skimage scipy bokeh
+        pip install pyinstaller
+        pip install napari PySide6 torch ultralytics h5py natsort torchvision tqdm timm ml_collections pydicom skimage scipy bokeh
 
     - name: Build with PyInstaller
       run: pyinstaller OCT_windows_app.spec
@@ -32,10 +31,8 @@ jobs:
     - name: Zip Windows executable
       run: |
         cd dist
-        # Create a zip file of the executable.
-        # The name 'OCT_windows_app.exe' should match the 'name' in your Windows spec file's EXE object.
         zip -r OCT_windows_app.zip OCT_windows_app.exe
-        ls -l # List files to verify the zip
+        ls -l
       shell: pwsh
 
     - name: Upload artifact
