--- a/.github/workflows/macos_build.yaml
+++ b/.github/workflows/macos_build.yaml
@@ -9,7 +9,8 @@ on:
 jobs:
   build:
     runs-on: macos-latest # Use the latest macos runner
-
+    permissions:
+      contents: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v4 # Action to checkout your repository code
