--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,5 @@ setup.sh
 models/model_transmorph_x_translation.pt
 extract_registered_enface.py
 output/
+.github/workflows/macos_build.yaml
+.github/workflows/windows_build.yaml
