--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Zip Windows executable
       run: |
-        Compress-Archive -Path dist/OCT_windows_app.exe -DestinationPath dist/OCT_windows_app.zip
+        Compress-Archive -Path dist/OCT_windows_app -DestinationPath dist/OCT_windows_app.zip
         ls -l dist
       shell: pwsh
 
