refactored the code to use a master class to spawn worker classes

--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,5 @@ extract_registered_enface.py
 output/
 .github/workflows/macos_build.yaml
 .github/workflows/windows_build.yaml
+debug.txt
+test_GUI_scripts/
