--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -29,7 +29,7 @@ jobs:
         pip install napari pyside6 torch ultralytics h5py natsort torchvision tqdm timm ml_collections pydicom scikit-image scipy bokeh matplotlib
 
     - name: Build with PyInstaller
-      run: pyinstaller OCT_mac_app.spec
+      run: pyinstaller spec_files/OCT_mac_app.spec
 
     - name: Zip macos executable
       run: |
@@ -66,7 +66,7 @@ jobs:
         pip install napari pyside6 torch ultralytics h5py natsort torchvision tqdm timm ml_collections pydicom scikit-image scipy bokeh matplotlib
 
     - name: Build with PyInstaller
-      run: pyinstaller OCT_windows_app.spec
+      run: pyinstaller spec_files/OCT_windows_app.spec
 
     - name: Zip Windows executable
       run: |
