--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ output/
 .github/workflows/windows_build.yaml
 debug.txt
 test_GUI_scripts/
+model_transmorph_FIXEDPOSEMBD_Large_early_batch32_unidirectional.pt
+model_transmorph_FIXEDPOSEMBD_Large_onlyX_batch32_normalized_shiftrange8_2_dynamiccrop_onlyMSE_unidirectional_warp.pt
+model_transmorph_FIXEDPOSEMBD_Small_early_batch32_unidirectional.pt
+model_transmorph_FIXEDPOSEMBD_Small_onlyX_batch32_normalized_shiftrange8_2_dynamiccrop_onlyMSE_unidirectional_warp.pt
+model_transmorph_LRNPOSEMBD_Large_onlyX_batch32_normalized_shiftrange10_dynamiccrop_onlyMSE_unidirectional_warp.pt
+model_transmorph_LRNPOSEMBD_Large_onlyX_batch32_ncc_normalized_shiftrange3_dynamiccrop_onlyMSE.pt
