--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bokeh>=3.7.3",
     "h5py>=3.14.0",
     "matplotlib>=3.10.3",
+    "maturin>=1.10.2",
     "ml-collections>=1.1.0",
     "napari>=0.6.2",
     "natsort>=8.4.0",
