--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 h5py
-matplotlib
 natsort
 numpy
 opencv_python
@@ -15,3 +14,6 @@ dask-jobqueue
 PySide6
 torch
 torchvision
+timm
+ml_collections
+maturin
