--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -24,6 +24,9 @@ jobs:
       with:
         python-version: '3.12.10' # Specify the Python version
 
+    - name: Set up Rust
+      uses: dtolnay/rust-toolchain@stable
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -65,6 +68,9 @@ jobs:
       uses: actions/setup-python@v5 # Action to set up Python
       with:
         python-version: '3.12.10' # Specify the Python version
+
+    - name: Set up Rust
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Install dependencies
       run: |
