--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -36,7 +36,7 @@ jobs:
     - name: Run Maturin for Rust Bindings
       run: |
         maturin build --release -m rust_bindings/Cargo.toml
-        WHEEL_FILE=$(python -c "import glob, os; print(os.path.abspath(glob.glob('rust_bindings/target/wheels/*.whl')[0]))")
+        WHEEL_FILE=$(python -c "import glob, os; print(os.path.join(glob.glob('rust_bindings/target/wheels/*.whl')[0]))")
         pip install "${WHEEL_FILE}" --force-reinstall
 
     - name: Build with PyInstaller
@@ -82,7 +82,7 @@ jobs:
     - name: Run Maturin for Rust Bindings
       run: |
         maturin build --release -m rust_bindings/Cargo.toml
-        WHEEL_FILE=$(python -c "import glob, os; print(os.path.abspath(glob.glob('rust_bindings/target/wheels/*.whl')[0]))")
+        WHEEL_FILE=$(python -c "import glob, os; print(os.path.join(glob.glob('rust_bindings/target/wheels/*.whl')[0]))")
         pip install "${WHEEL_FILE}" --force-reinstall
       
     - name: Build with PyInstaller
