--- a/rust_bindings/Cargo.toml
+++ b/rust_bindings/Cargo.toml
@@ -14,6 +14,7 @@ kornia-rs = "0.1.5"
 ndarray = { version = "0.15.6", features = ["rayon"] }
 numpy = "0.27.0"
 pyo3 = { version = "0.27.1", features = ["extension-module"] }
+tch = "0.22.0"
 
 [patch.crates-io]
 ndarray = { git = "https://github.com/rust-ndarray/ndarray.git", tag = "0.15.6" }
